--- a/bloco_3/dia_3/style4.css
+++ b/bloco_3/dia_3/style4.css
@@ -8,7 +8,6 @@ div:hover {
     border-color: red;
 }
 
-
 div:nth-of-type(1) {
     color: blue;
 }
@@ -28,4 +27,8 @@ div:nth-of-type(4) {
 
 div:nth-of-type(5) {
     color: lightblue;
+}
+
+div:nth-child(2n+1) h3:nth-child(1) {
+   font-style: italic;
 }
