--- a/bloco_6/style.css
+++ b/bloco_6/style.css
@@ -1,4 +1,23 @@
+body {
+    max-width: 80%;
+    margin: auto;
+}
 
 textarea {
     resize: none;
+}
+
+div {
+    border: 1px solid teal;
+    border-radius: 5px;
+    padding: 50px;
+    margin-top: 40px;
+}
+
+h1 {
+    text-align: center;
+}
+
+#submit-button {
+    float: right;
 }
